RUN-68 DJ: implemented update company (put)